--- a/examples/advanced_params_example/config/app.toml
+++ b/examples/advanced_params_example/config/app.toml
@@ -1,9 +1,8 @@
 [app]
-name = "hello_world_example"
+name = "advanced_params_example"
 version = "0.0.4"
 debug = true
 
 [server]
 host = "localhost"
 port = 8080
-
